2012-12-13  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (delete_alert_omp): Correct passed get function.

2012-12-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_many): Add actions to OMP GET for task observers.

2012-12-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-task-form, task): Add filter params to and
	remove overrides params from task icons.
	(gsa:alert-in-trash): New function.
	(task [trash]): Use gsa:alert-in-trash for restore check, because there
	are multiple alerts now.
	(list-window): For the refresh in the header, get the filter from
	FILTERS/TERM and remove the filt_id param.  This keeps the existing
	filtering but drops the actual named filter, otherwise the new
	apply_override could conflict with the filter.

2012-12-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_tasks): Prepend apply_overrides to the filter
	according to the overrides request param.

	* src/html/omp.xsl (list-window-line-icons): Add extra-params-details.
	(task): Pass overrides in extra-params-details.
	(list-window): Enable overrides control for Tasks page.

2012-12-12  Hani Benhabiles  <kroosec@gmail.com>

	* src/html/omp.xsl (html-create-alert-form): Update help link. Add
	Alerts list link.
	(new_alert): New template.
	(html-alerts-table): Use list-window.
	(alert): Link alert names to their details page. Use
	list-window-line-icons, detail-headers-icons and minor-details templates.
	(get_alerts): Remove html-create-alert-form call.

2012-12-12  Hani Benhabiles  <kroosec@gmail.com>

	* src/gsad_omp.c (new_alert_omp): New function. Correct typo in
	changelog.

2012-12-12  Hani Benhabiles  <kroosec@gmail.com>

	* src/gsad_omp.c (new_alert, export_alert_omp, export_alerts_omp):
	New functions.

	* src/gsad_omp.h: Add headers accordingly.

	* src/gsad.c (init_validator, exec_omp_get): Add new_alert, export_alert
	and export_alerts command.
